[project]
name = "telephony"
version = "2.0.0"
description = "LK Parser Worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.0",
    "selenium>=4.29.0",
    "taskiq-redis>=1.0.2",
    "taskiq>=0.11.13",
    "tenacity>=9.0.0",
    "tzdata>=2024.1",
]